--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.jpa.show-sql=true
+
+#LiquiBase properties
+#spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+#spring.flyway.enabled=false
+#spring.liquibase.enabled=false
+#spring.liquibase.drop-first=true
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+#sql properties
+#spring.datasource.username=root
+#spring.datasource.password=12345.com
+#spring.datasource.url=jdbc:mysql://localhost:3306/testschema?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
