--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-spring.jpa.show-sql=true
-
 #LiquiBase properties
-#spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
-#spring.flyway.enabled=false
-#spring.liquibase.enabled=false
-#spring.liquibase.drop-first=true
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+spring.flyway.enabled=false
+spring.liquibase.enabled=false
+spring.liquibase.drop-first=true
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -12,9 +10,10 @@ spring.jpa.show-sql=true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 #spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #sql properties
+spring.jpa.show-sql=true
 #spring.datasource.username=root
 #spring.datasource.password=12345.com
 #spring.datasource.url=jdbc:mysql://localhost:3306/testschema?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
