--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.liquibase.drop-first=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #sql properties
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 #spring.datasource.username=root
 #spring.datasource.password=12345.com
-#spring.datasource.url=jdbc:mysql://localhost:3306/testschema?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/liquibasedatabase?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
