--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,11 @@
         <!--        liquibase-->
 
         <!--        mysql-->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.44</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>mysql</groupId>-->
+<!--            <artifactId>mysql-connector-java</artifactId>-->
+<!--            <version>5.1.44</version>-->
+<!--        </dependency>-->
         <!--        mysql-->
 
         <dependency>
