--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,11 @@ spring.liquibase.drop-first=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #sql properties
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 #spring.datasource.username=root
 #spring.datasource.password=12345.com
 #spring.datasource.url=jdbc:mysql://localhost:3306/liquibasedatabase?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
