Created product list components (FE). Also created slider

--- a/pom.xml
+++ b/pom.xml
@@ -40,13 +40,11 @@
         </dependency>
         <!--        liquibase-->
 
-        <!--        mysql-->
-<!--        <dependency>-->
-<!--            <groupId>mysql</groupId>-->
-<!--            <artifactId>mysql-connector-java</artifactId>-->
-<!--            <version>5.1.44</version>-->
-<!--        </dependency>-->
-        <!--        mysql-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
