--- a/ui/customer-ui/package.json
+++ b/ui/customer-ui/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/platform-server": "^8.0.2",
     "@angular/router": "~8.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "@nguniversal/express-engine": "^7.1.1",
     "bootstrap": "^4.3.1",
     "restler": "^3.4.0",
@@ -37,7 +38,7 @@
     "@angular/language-service": "~8.0.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "^5.0.0",
     "concurrently": "^4.1.0",
     "jasmine-core": "~3.4.0",
