--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,26 @@
     </properties>
 
     <dependencies>
+        <!--        JUnit test-->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.leangen.geantyref</groupId>
+            <artifactId>geantyref</artifactId>
+            <version>1.3.9</version>
+            <scope>test</scope>
+        </dependency>
+        <!--        JUnit test-->
+
         <!--        swagger-->
         <dependency>
             <groupId>io.springfox</groupId>
