--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #LiquiBase properties
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 spring.flyway.enabled=false
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
 spring.liquibase.drop-first=true
 
 ## Hibernate Properties
@@ -9,7 +9,7 @@ spring.liquibase.drop-first=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #sql properties
