--- a/ui/customer-ui/package.json
+++ b/ui/customer-ui/package.json
@@ -26,6 +26,9 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "@nguniversal/express-engine": "^7.1.1",
     "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "ng5-slider": "^1.2.4",
+    "ngx-bootstrap": "^5.1.1",
     "restler": "^3.4.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
