--- a/ui/customer-ui/package.json
+++ b/ui/customer-ui/package.json
@@ -24,7 +24,8 @@
     "@angular/platform-server": "^8.0.2",
     "@angular/router": "~8.0.1",
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
-    "@nguniversal/express-engine": "^7.1.1",
+    "@nguniversal/express-engine": "^8.0.0-rc.1",
+    "@nguniversal/module-map-ngfactory-loader": "^8.0.0-rc.1",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "ng5-slider": "^1.2.4",
