--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,16 @@
 spring.flyway.enabled=false
 
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
 spring.liquibase.drop-first=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/liquibasedatabase
-# ?useSSL=false&
-# useLegacyDatetimeCode=false&
-# serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?\
-#  useSSL=false&\
-#  createDatabaseIfNotExist=true
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?\
+  useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=r00t
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
