--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.show-sql=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?\
-  useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+  useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=r00t
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
